Añadi una pagina nueva

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
             <h2>Al mundo de la fotografia.</h2>
             <p><a href="#"><label style="border-radius: 5px; background: #c5b03a; border-color:#fcef39;  height:44px; color: rgb(17, 2, 2); width: 152px; text-align: center; font-size: 16px; padding: 10px 0;">Holaa!! UwU</label> 
             </a></p>
-            <a><a href="paginaS.html"> SIGUIENTE</a>
+            <br><br>
+            <a><button type="button"><a href="index.html"> Inicio</a></button>
+            <a><button type="button"><a href="paginaS.html"> Pagina 2</a></button>
+            <a><button type="button"><a href="Pagina3.html"> Pagina 3</a></button>
         </body>
         </div>
     </div>            
