--- a/paginaS.html
+++ b/paginaS.html
@@ -6,7 +6,10 @@
         <h3>"Annie Leibovitz"</h3>
         <img src="../MiWeb/imgs/fotografia.jpg" alt="" height="600px" width="980">
         </a></p>
-        <a><a href="index.html"> ANTERIOR</a>
+        <br><br>
+        <a><button type="button"><a href="index.html"> Inicio</a></button>
+            <a><button type="button"><a href="paginaS.html"> Pagina 2</a></button>
+            <a><button type="button"><a href="Pagina3.html"> Pagina 3</a></button>
     </body>
     </div>
 </div>
